--- a/papers/Softening/bib.bib
+++ b/papers/Softening/bib.bib
@@ -614,16 +614,6 @@ year = {2016}
   publisher = {American Physical Society},
 }
 
-@article{Lee2003,
-	year = 2003,
-	volume = {15},
-	number = {8},
-	pages = {1353},
-	title = {Domain wall diffusion and domain wall softening},
-	author = {W T Lee and E K H Salje and U Bismayer},
-	journal = {J. Condens. Matter Phys.},
-}
-
 @article{Patel2017,
 author = {Patel, Kinnary and Prosandeev, Sergey and Bellaiche, Laurent},
 issn = {2057-3960},
@@ -644,17 +634,6 @@ year = {2017}
   pages = {051402},
   numpages = {5},
   year = {2017},
-}
-
-@article{Marton2018,
-author = {P. Marton},
-journal = {Phase Transit.},
-title = {Discretisation originated Peierls–Nabarro barriers in simulations of ferroelectrics},
-volume = {91},
-number = {9-10},
-pages = {959--968},
-year  = {2018},
-publisher = {Taylor & Francis},
 }
 
 @article{Sidorkin2012,
@@ -1245,3 +1224,10 @@ volume = {153},
 year = {1994}
 }
 
+@misc{2Dmesh,
+   author = "Zureks",
+   title = "Example of 2D mesh",
+   year = "2007",
+   url = "https://commons.wikimedia.org/wiki/File:Example_of_2D_mesh.png",
+   note = "[Online; accessed 20-January-2021]"
+ }
